# GPHA

./: .env.example  .gitignore  CONTRIBUTING.md  GPHA.txt  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TESTING_REPORT.md  TEST_SUMMARY.md  config.yaml  example.py  gui.py  main.py  pyproject.toml  requirements.txt  setup.py  validate.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: examples.md
gpha/: __init__.py  analyzer.py  cli.py  config.py  github_client.py  models.py
gpha/analyzers/: __init__.py  code_churn.py  contributor_patterns.py  issue_stagnation.py  repo_activity.py
tests/: test_analyzer.py  test_analyzers.py  test_config.py  test_github_client.py  test_integration.py  test_models.py
